--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "customhtmlbase",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This base enables you to subclass any kind of HTMLElement - Videos - Images - whatever you want",
   "main": "build/custom-base.js",
   "types": "build/custom-base.d.ts",
@@ -9,5 +9,10 @@
   },
   "author": "mormotomyia",
   "license": "MIT",
-  "keywords": ["typescript","extending", "htmlelement","meta"]
+  "keywords": [
+    "typescript",
+    "extending",
+    "htmlelement",
+    "meta"
+  ]
 }
