--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {"type": "git","url": "https://github.com/mormotomyia/CustomHtmlBase"},
   "author": "mormotomyia",
   "license": "MIT",
   "keywords": [
