--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "customhtmlbase",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "This base enables you to subclass any kind of HTMLElement - Videos - Images - whatever you want",
   "main": "build/custom-base.js",
   "types": "build/custom-base.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {"type": "git","url": "https://github.com/mormotomyia/CustomHtmlBase"},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mormotomyia/CustomHtmlBase"
+  },
   "author": "mormotomyia",
   "license": "MIT",
   "keywords": [
