--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "customhtmlbase",
   "version": "1.0.7",
   "description": "This base enables you to subclass any kind of HTMLElement - Videos - Images - whatever you want",
-  "main": "build/custom-base.js",
-  "types": "build/custom-base.d.ts",
+  "main": "build/all.js",
+  "types": "build/all.d.ts",
   "scripts": {
     "build": "tsc",
     "publish": "npm publish . --access public",
